Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Volkswagen giảm giá xe cao nhất 370 triệu đồng",
+    "content": "Trong tháng 3, Volkswagen đã thực hiện giảm giá lớn cho nhiều mẫu xe của mình, với mức giảm cao nhất lên tới 370 triệu đồng cho mẫu Touareg. Thương hiệu Đức này hỗ trợ 100% lệ phí trước bạ cho dòng Touareg và 50% cho mẫu Teramont X, trong bối cảnh thị trường ôtô Việt Nam ghi nhận nhiều hãng khác cũng áp dụng khuyến mãi nhằm kích cầu. Mẫu Tiguan cũng có mức giảm từ 168-202 triệu đồng tùy theo địa phương đăng ký.",
+    "link": "https://vnexpress.net/volkswagen-giam-gia-xe-cao-nhat-370-trieu-dong-4865398.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Volkswagen giảm giá mẫu xe nào cao nhất trong tháng 3?",
+    "answers": [
+      {
+        "text": "Touareg",
+        "correct": true
+      },
+      {
+        "text": "Tiguan",
+        "correct": false
+      },
+      {
+        "text": "Teramont X",
+        "correct": false
+      },
+      {
+        "text": "Viloran",
+        "correct": false
+      },
+      {
+        "text": "Passat",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nga chặn đứng nhóm binh sĩ Ukraine vượt sông Dnieper",
     "content": "Quân đội Nga tại vùng Kherson đã ngăn chặn thành công một nhóm binh sĩ Ukraine đang cố gắng vượt sông Dnieper bằng cách tấn công chiếc xuồng của họ. Đoạn video ghi lại vụ việc cho thấy UAV Nga đã phát hiện và tiêu diệt xuồng chở 7-8 lính Ukraine bằng một quả lựu đạn. Vụ tập kích này là một phần trong các hoạt động quân sự của Nga nhằm ngăn chặn các nỗ lực vượt sông của quân đội Ukraine.",
     "link": "https://dantri.com.vn/the-gioi/nga-chan-dung-nhom-binh-si-ukraine-vuot-song-dnieper-20250325122328333.htm",
@@ -2581,6 +2612,37 @@
     ]
   },
   {
+    "title": "Honda Rebel 300 E-Clutch mới giá 4.700 USD",
+    "content": "Honda vừa ra mắt mẫu xe Rebel 300 E-Clutch mới tại triển lãm Bangkok Motor Show 2025. Đây là mẫu xe 300 phân khối đầu tiên trên thế giới trang bị ly hợp điện tử E-Clutch, trước đây chỉ có ở dòng 650 phân khối. Rebel 300 có động cơ xi-lanh đơn 286 phân khối, hộp số 6 cấp và trọng lượng 170 kg, nhắm đến khách hàng lần đầu sử dụng xe phân khối lớn. Giá bán của xe là 4.700 USD.",
+    "link": "https://vnexpress.net/honda-rebel-300-e-clutch-moi-gia-4-700-usd-4864980.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Honda Rebel 300 E-Clutch mới có giá bao nhiêu?",
+    "answers": [
+      {
+        "text": "4.700 USD",
+        "correct": true
+      },
+      {
+        "text": "3.500 USD",
+        "correct": false
+      },
+      {
+        "text": "5.000 USD",
+        "correct": false
+      },
+      {
+        "text": "6.000 USD",
+        "correct": false
+      },
+      {
+        "text": "4.000 USD",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xe gầm cao cỡ B Trung Quốc khuấy động thị trường Việt",
     "content": "Xe gầm cao cỡ B từ Trung Quốc như Geely Coolray, Omoda C5 và MG ZS đang tạo ra sự cạnh tranh mạnh mẽ trên thị trường Việt Nam. Giá bán của những mẫu xe này khá tương đồng, với mức khởi điểm từ hơn 530 triệu đồng, thu hút sự quan tâm từ người tiêu dùng. Dù vẫn đối mặt với tâm lý ưa chuộng thương hiệu Nhật, Hàn, xe Trung Quốc đang dần thu hút khách hàng trẻ và những người có ngân sách hạn chế. Các thương hiệu này cũng có kế hoạch dài hạn để phát triển sản xuất trong nước nhằm tăng sức cạnh tranh.",
     "link": "https://vnexpress.net/xe-gam-cao-co-b-trung-quoc-khuay-dong-thi-truong-viet-4865116.html",
@@ -2638,37 +2700,6 @@
       },
       {
         "text": "18 cm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Honda Rebel 300 E-Clutch mới giá 4.700 USD",
-    "content": "Honda vừa ra mắt mẫu xe Rebel 300 E-Clutch mới tại triển lãm Bangkok Motor Show 2025. Đây là mẫu xe 300 phân khối đầu tiên trên thế giới trang bị ly hợp điện tử E-Clutch, trước đây chỉ có ở dòng 650 phân khối. Rebel 300 có động cơ xi-lanh đơn 286 phân khối, hộp số 6 cấp và trọng lượng 170 kg, nhắm đến khách hàng lần đầu sử dụng xe phân khối lớn. Giá bán của xe là 4.700 USD.",
-    "link": "https://vnexpress.net/honda-rebel-300-e-clutch-moi-gia-4-700-usd-4864980.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Honda Rebel 300 E-Clutch mới có giá bao nhiêu?",
-    "answers": [
-      {
-        "text": "4.700 USD",
-        "correct": true
-      },
-      {
-        "text": "3.500 USD",
-        "correct": false
-      },
-      {
-        "text": "5.000 USD",
-        "correct": false
-      },
-      {
-        "text": "6.000 USD",
-        "correct": false
-      },
-      {
-        "text": "4.000 USD",
         "correct": false
       }
     ]
@@ -4571,33 +4602,6 @@
     ]
   },
   {
-    "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
-    "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
-    "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tại sao việc duy trì khoảng cách an toàn trên đường cao tốc là quan trọng?",
-    "answers": [
-      {
-        "text": "Để tránh tai nạn giao thông.",
-        "correct": true
-      },
-      {
-        "text": "Để tiết kiệm nhiên liệu.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng tốc độ lái xe.",
-        "correct": false
-      },
-      {
-        "text": "Để giảm tiếng ồn trong xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mụn lưng có thể chữa khỏi không?",
     "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
     "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
@@ -4620,6 +4624,33 @@
       },
       {
         "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
+    "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
+    "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tại sao việc duy trì khoảng cách an toàn trên đường cao tốc là quan trọng?",
+    "answers": [
+      {
+        "text": "Để tránh tai nạn giao thông.",
+        "correct": true
+      },
+      {
+        "text": "Để tiết kiệm nhiên liệu.",
+        "correct": false
+      },
+      {
+        "text": "Để tăng tốc độ lái xe.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm tiếng ồn trong xe.",
         "correct": false
       }
     ]
