--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,60 @@
     */
     const newsData = [
   {
+    "title": "Phó chủ tịch Quốc hội Lê Minh Hoan nói về cơ chế kiểm soát từ vụ kẹo rau củ Kera",
+    "content": "Phó chủ tịch Quốc hội Lê Minh Hoan đã thảo luận về cơ chế tự kiểm soát của các hiệp hội ngành hàng trong bối cảnh vụ quảng cáo kẹo rau củ Kera. Ông nhấn mạnh rằng việc xây dựng luật không chỉ nhằm quản lý mà còn tạo điều kiện phát triển cho doanh nghiệp, đồng thời giảm bớt thủ tục hành chính. Ông cũng cho rằng cần trao quyền cho các hiệp hội ngành hàng để tự kiểm soát và nâng cao trách nhiệm của doanh nghiệp trong việc đảm bảo chất lượng sản phẩm.",
+    "link": "https://tuoitre.vn/pho-chu-tich-quoc-hoi-le-minh-hoan-noi-ve-co-che-kiem-soat-tu-vu-keo-rau-cu-kera-20250325142206514.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Phó chủ tịch Quốc hội Lê Minh Hoan đã nói gì về vụ kẹo rau củ Kera?",
+    "answers": [
+      {
+        "text": "Ông nhấn mạnh cơ chế tự kiểm soát của hiệp hội ngành hàng.",
+        "correct": true
+      },
+      {
+        "text": "Ông yêu cầu phạt nặng quảng cáo sai sự thật.",
+        "correct": false
+      },
+      {
+        "text": "Ông đề xuất tăng cường quảng cáo cho sản phẩm.",
+        "correct": false
+      },
+      {
+        "text": "Ông khuyến khích doanh nghiệp tự do kinh doanh.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chủ tịch Nguyễn Văn Được: 'TP.HCM chuyển phát triển kinh tế từ chiều rộng sang chiều sâu'",
+    "content": "Chủ tịch UBND TP.HCM Nguyễn Văn Được đã phát biểu tại hội thảo \"TP.HCM - Thành tựu 50 năm xây dựng, bảo vệ và phát triển\" rằng thành phố đang chuyển đổi mô hình phát triển kinh tế từ chiều rộng sang chiều sâu, tập trung vào công nghệ cao và các yếu tố bền vững. Ông nhấn mạnh rằng mặc dù có nhiều thách thức, TP.HCM vẫn có nhiều tín hiệu lạc quan, như việc phát triển trung tâm tài chính và triển khai hệ thống đường sắt đô thị. Ông cũng cho rằng sự đoàn kết và đổi mới là chìa khóa cho sự phát triển của TP.HCM trong 50 năm qua.",
+    "link": "https://tuoitre.vn/chu-tich-nguyen-van-duoc-tp-hcm-chuyen-phat-trien-kinh-te-tu-chieu-rong-sang-chieu-sau-20250325141123793.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "TP.HCM đang chuyển đổi mô hình phát triển kinh tế theo hướng nào?",
+    "answers": [
+      {
+        "text": "Từ chiều rộng sang chiều sâu",
+        "correct": true
+      },
+      {
+        "text": "Từ chiều sâu sang chiều rộng",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tập trung vào chiều rộng",
+        "correct": false
+      },
+      {
+        "text": "Không thay đổi mô hình phát triển",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Gen Z muốn thành 'ông chủ' của chính mình",
     "content": "Thế hệ Gen Z đang ngày càng hướng tới việc tự khởi nghiệp thay vì làm thuê, nhờ vào sự phát triển của công nghệ và mạng xã hội. Nhiều người trẻ như Chase Gallagher đã thành công trong việc xây dựng doanh nghiệp riêng, cho thấy sự thay đổi trong quan niệm về sự nghiệp. Gần 2/3 Gen Z đã hoặc có ý định khởi nghiệp, thể hiện mong muốn kiểm soát sự nghiệp và tài chính của bản thân. Tuy nhiên, thực tế cho thấy chỉ một tỷ lệ nhỏ trong số họ thực sự làm được điều này.",
     "link": "https://vnexpress.net/gen-z-muon-thanh-ong-chu-cua-chinh-minh-4865568.html",
@@ -1819,6 +1873,33 @@
     ]
   },
   {
+    "title": "Chở người ở thùng sau xe bán tải có bị phạt?",
+    "content": "Việc chở người ở thùng sau xe bán tải là hành vi bị cấm theo quy định của pháp luật giao thông đường bộ. Các xe bán tải chỉ được phép chở người ở trong cabin, không được chở người ở thùng xe. Nếu vi phạm, người điều khiển xe có thể bị xử phạt hành chính với mức phạt cụ thể tùy thuộc vào từng trường hợp vi phạm.",
+    "link": "https://vnexpress.net/cho-nguoi-o-thung-sau-xe-ban-tai-co-bi-phat-4865410.html",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Chở người ở thùng sau xe bán tải có bị xử phạt không?",
+    "answers": [
+      {
+        "text": "Có, chở người ở thùng sau xe bán tải bị phạt.",
+        "correct": true
+      },
+      {
+        "text": "Không, đây là hành vi hợp pháp.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu có tai nạn.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu không có giấy tờ xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thói quen thường gặp khiến bạn đau lưng?",
     "content": "Nhiều thói quen sinh hoạt hàng ngày có thể là nguyên nhân gây ra hoặc làm nặng thêm tình trạng đau lưng. Những thói quen này bao gồm việc ngồi lâu, không duy trì tư thế đúng khi làm việc, và thiếu luyện tập thể dục. Việc nhận biết và điều chỉnh những thói quen này có thể giúp cải thiện tình trạng sức khỏe lưng của bạn.",
     "link": "https://vnexpress.net/thoi-quen-thuong-gap-khien-ban-dau-lung-4865482.html",
@@ -1845,33 +1926,6 @@
       },
       {
         "text": "Uống nhiều nước",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chở người ở thùng sau xe bán tải có bị phạt?",
-    "content": "Việc chở người ở thùng sau xe bán tải là hành vi bị cấm theo quy định của pháp luật giao thông đường bộ. Các xe bán tải chỉ được phép chở người ở trong cabin, không được chở người ở thùng xe. Nếu vi phạm, người điều khiển xe có thể bị xử phạt hành chính với mức phạt cụ thể tùy thuộc vào từng trường hợp vi phạm.",
-    "link": "https://vnexpress.net/cho-nguoi-o-thung-sau-xe-ban-tai-co-bi-phat-4865410.html",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Chở người ở thùng sau xe bán tải có bị xử phạt không?",
-    "answers": [
-      {
-        "text": "Có, chở người ở thùng sau xe bán tải bị phạt.",
-        "correct": true
-      },
-      {
-        "text": "Không, đây là hành vi hợp pháp.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ bị phạt nếu có tai nạn.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ bị phạt nếu không có giấy tờ xe.",
         "correct": false
       }
     ]
@@ -2430,33 +2484,6 @@
     ]
   },
   {
-    "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
-    "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
-    "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Eco Central Park ở miền Trung có gì đặc biệt cho cư dân?",
-    "answers": [
-      {
-        "text": "Cung cấp không gian sống, làm việc và giải trí đa thế hệ.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có cây xanh và mặt nước.",
-        "correct": false
-      },
-      {
-        "text": "Không có trường học và khu thể thao.",
-        "correct": false
-      },
-      {
-        "text": "Là một khu đô thị nhỏ với ít tiện ích.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
     "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
     "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
@@ -2479,6 +2506,33 @@
       },
       {
         "text": "Nốt ruồi không thay đổi theo thời gian.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
+    "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
+    "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Eco Central Park ở miền Trung có gì đặc biệt cho cư dân?",
+    "answers": [
+      {
+        "text": "Cung cấp không gian sống, làm việc và giải trí đa thế hệ.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có cây xanh và mặt nước.",
+        "correct": false
+      },
+      {
+        "text": "Không có trường học và khu thể thao.",
+        "correct": false
+      },
+      {
+        "text": "Là một khu đô thị nhỏ với ít tiện ích.",
         "correct": false
       }
     ]
@@ -2600,33 +2654,6 @@
     ]
   },
   {
-    "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
-    "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
-    "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
-    "cat": "phap-luat",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Con gái tôi có thể có song tịch không nếu cha là người Pháp và mẹ là người Việt?",
-    "answers": [
-      {
-        "text": "Có, cháu có thể xin nhập quốc tịch Việt Nam mà không phải thôi quốc tịch Pháp.",
-        "correct": true
-      },
-      {
-        "text": "Không, cháu phải thôi quốc tịch Pháp để có quốc tịch Việt Nam.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng cháu cần phải sống ở Việt Nam ít nhất 5 năm.",
-        "correct": false
-      },
-      {
-        "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đề xuất tăng dần tiền lương đóng BHXH bắt buộc cho học viên quân đội, công an",
     "content": "Bộ Quốc phòng vừa đề xuất điều chỉnh mức tiền lương đóng bảo hiểm xã hội (BHXH) cho học viên quân đội và công an. Theo dự thảo, trong hai năm đầu, mức lương đóng BHXH sẽ bằng hai lần mức tham chiếu, sau đó tăng dần 0,5 lần mỗi năm, tối đa đạt 4 lần mức tham chiếu. Đề xuất này nhằm khắc phục hạn chế trong quyền lợi hưu trí của các quân nhân và phù hợp với Luật BHXH sửa đổi.",
     "link": "https://vnexpress.net/de-xuat-tang-dan-tien-luong-dong-bhxh-bat-buoc-cho-hoc-vien-quan-doi-cong-an-4865318.html",
@@ -2649,6 +2676,33 @@
       },
       {
         "text": "Mức đóng BHXH sẽ không thay đổi trong 5 năm tới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cha là người Pháp, mẹ là người Việt, con có được song tịch không?",
+    "content": "Con gái của bạn, sinh ra và lớn lên ở Pháp với cha là người Pháp và mẹ là người Việt, có khả năng xin nhập quốc tịch Việt Nam mà không cần thôi quốc tịch Pháp. Theo Điều 19 Luật Quốc tịch Việt Nam, nếu người xin nhập quốc tịch là con đẻ của công dân Việt Nam, họ có thể được phép nhập quốc tịch Việt Nam mà không phải đáp ứng một số điều kiện. Hồ sơ cần chuẩn bị bao gồm đơn xin nhập quốc tịch, giấy khai sinh và lý lịch tư pháp.",
+    "link": "https://tuoitre.vn/cha-la-nguoi-phap-me-la-nguoi-viet-con-co-duoc-song-tich-khong-20250306121602648.htm",
+    "cat": "phap-luat",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Con gái tôi có thể có song tịch không nếu cha là người Pháp và mẹ là người Việt?",
+    "answers": [
+      {
+        "text": "Có, cháu có thể xin nhập quốc tịch Việt Nam mà không phải thôi quốc tịch Pháp.",
+        "correct": true
+      },
+      {
+        "text": "Không, cháu phải thôi quốc tịch Pháp để có quốc tịch Việt Nam.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng cháu cần phải sống ở Việt Nam ít nhất 5 năm.",
+        "correct": false
+      },
+      {
+        "text": "Không, cháu không đủ điều kiện để xin quốc tịch Việt Nam.",
         "correct": false
       }
     ]
@@ -2859,33 +2913,6 @@
     ]
   },
   {
-    "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
-    "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
-    "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Lễ cưới của Lê Hồng Phước được trang trí bằng gì?",
-    "answers": [
-      {
-        "text": "400 chiếc bánh đặc sản và rau củ quả",
-        "correct": true
-      },
-      {
-        "text": "1000 chiếc bánh mì",
-        "correct": false
-      },
-      {
-        "text": "500 hoa tươi",
-        "correct": false
-      },
-      {
-        "text": "300 chai rượu",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 cơ chế gây ung thư của rượu bia",
     "content": "Rượu bia có thể gây ung thư thông qua bốn cơ chế chính: làm tổn thương DNA, gây viêm nhiễm, rối loạn hormone và hỗ trợ hấp thụ các chất gây ung thư khác. Theo nghiên cứu, ngay cả việc tiêu thụ một lượng nhỏ rượu cũng có thể làm tăng nguy cơ ung thư, đặc biệt là ung thư vú do sự gia tăng nồng độ estrogen. Cựu Tổng Y sĩ Mỹ đã nhấn mạnh mối liên hệ này và kêu gọi dán nhãn cảnh báo trên các sản phẩm có cồn.",
     "link": "https://vnexpress.net/4-co-che-gay-ung-thu-cua-ruou-bia-4865332.html",
@@ -2908,6 +2935,33 @@
       },
       {
         "text": "Chỉ gây nghiện và không gây ung thư",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
+    "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
+    "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Lễ cưới của Lê Hồng Phước được trang trí bằng gì?",
+    "answers": [
+      {
+        "text": "400 chiếc bánh đặc sản và rau củ quả",
+        "correct": true
+      },
+      {
+        "text": "1000 chiếc bánh mì",
+        "correct": false
+      },
+      {
+        "text": "500 hoa tươi",
+        "correct": false
+      },
+      {
+        "text": "300 chai rượu",
         "correct": false
       }
     ]
