Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -179,6 +179,37 @@
     ]
   },
   {
+    "title": "Nhiều trường THPT top đầu Hà Nội thay hiệu trưởng",
+    "content": "Sở Giáo dục và Đào tạo Hà Nội đã thực hiện điều động và bổ nhiệm nhiều hiệu trưởng mới tại các trường THPT hàng đầu của thành phố. Cụ thể, hiệu trưởng Trường THPT Phan Đình Phùng được chuyển sang làm hiệu trưởng Trường THPT Trương Định, trong khi đó hiệu trưởng Trường THPT Nguyễn Thị Minh Khai đảm nhận vị trí tại Trường THPT Xuân Phương. Sự thay đổi này diễn ra trong bối cảnh nhiều trường THCS và tiểu học cũng thực hiện các cuộc điều động tương tự.",
+    "link": "https://dantri.com.vn/giao-duc/nhieu-truong-thpt-top-dau-ha-noi-thay-hieu-truong-20250325142111287.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao nhiều trường THPT ở Hà Nội lại thay đổi hiệu trưởng?",
+    "answers": [
+      {
+        "text": "Vì Sở GD&ĐT Hà Nội điều động và bổ nhiệm hiệu trưởng mới.",
+        "correct": true
+      },
+      {
+        "text": "Để cải thiện chất lượng giáo dục.",
+        "correct": false
+      },
+      {
+        "text": "Do nhu cầu thay thế lãnh đạo cũ.",
+        "correct": false
+      },
+      {
+        "text": "Để đáp ứng yêu cầu của phụ huynh.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do tài chính của trường.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phó chủ tịch Quốc hội Lê Minh Hoan nói về cơ chế kiểm soát từ vụ kẹo rau củ Kera",
     "content": "Phó chủ tịch Quốc hội Lê Minh Hoan đã thảo luận về cơ chế tự kiểm soát của các hiệp hội ngành hàng trong bối cảnh vụ quảng cáo kẹo rau củ Kera. Ông nhấn mạnh rằng việc xây dựng luật không chỉ nhằm quản lý mà còn tạo điều kiện phát triển cho doanh nghiệp, đồng thời giảm bớt thủ tục hành chính. Ông cũng cho rằng cần trao quyền cho các hiệp hội ngành hàng để tự kiểm soát và nâng cao trách nhiệm của doanh nghiệp trong việc đảm bảo chất lượng sản phẩm.",
     "link": "https://tuoitre.vn/pho-chu-tich-quoc-hoi-le-minh-hoan-noi-ve-co-che-kiem-soat-tu-vu-keo-rau-cu-kera-20250325142206514.htm",
@@ -1697,33 +1728,6 @@
     ]
   },
   {
-    "title": "Chở người ở thùng sau xe bán tải có bị phạt?",
-    "content": "Việc chở người ở thùng sau xe bán tải là hành vi bị cấm theo quy định của pháp luật giao thông đường bộ. Các xe bán tải chỉ được phép chở người ở trong cabin, không được chở người ở thùng xe. Nếu vi phạm, người điều khiển xe có thể bị xử phạt hành chính với mức phạt cụ thể tùy thuộc vào từng trường hợp vi phạm.",
-    "link": "https://vnexpress.net/cho-nguoi-o-thung-sau-xe-ban-tai-co-bi-phat-4865410.html",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Chở người ở thùng sau xe bán tải có bị xử phạt không?",
-    "answers": [
-      {
-        "text": "Có, chở người ở thùng sau xe bán tải bị phạt.",
-        "correct": true
-      },
-      {
-        "text": "Không, đây là hành vi hợp pháp.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ bị phạt nếu có tai nạn.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ bị phạt nếu không có giấy tờ xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thói quen thường gặp khiến bạn đau lưng?",
     "content": "Nhiều thói quen sinh hoạt hàng ngày có thể là nguyên nhân gây ra hoặc làm nặng thêm tình trạng đau lưng. Những thói quen này bao gồm việc ngồi lâu, không duy trì tư thế đúng khi làm việc, và thiếu luyện tập thể dục. Việc nhận biết và điều chỉnh những thói quen này có thể giúp cải thiện tình trạng sức khỏe lưng của bạn.",
     "link": "https://vnexpress.net/thoi-quen-thuong-gap-khien-ban-dau-lung-4865482.html",
@@ -1750,6 +1754,33 @@
       },
       {
         "text": "Uống nhiều nước",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chở người ở thùng sau xe bán tải có bị phạt?",
+    "content": "Việc chở người ở thùng sau xe bán tải là hành vi bị cấm theo quy định của pháp luật giao thông đường bộ. Các xe bán tải chỉ được phép chở người ở trong cabin, không được chở người ở thùng xe. Nếu vi phạm, người điều khiển xe có thể bị xử phạt hành chính với mức phạt cụ thể tùy thuộc vào từng trường hợp vi phạm.",
+    "link": "https://vnexpress.net/cho-nguoi-o-thung-sau-xe-ban-tai-co-bi-phat-4865410.html",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Chở người ở thùng sau xe bán tải có bị xử phạt không?",
+    "answers": [
+      {
+        "text": "Có, chở người ở thùng sau xe bán tải bị phạt.",
+        "correct": true
+      },
+      {
+        "text": "Không, đây là hành vi hợp pháp.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu có tai nạn.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ bị phạt nếu không có giấy tờ xe.",
         "correct": false
       }
     ]
@@ -2308,33 +2339,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
-    "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Làm thế nào để nhận biết nốt ruồi có nguy cơ ung thư?",
-    "answers": [
-      {
-        "text": "Nốt ruồi bất đối xứng và có màu sắc khác nhau.",
-        "correct": true
-      },
-      {
-        "text": "Nốt ruồi có màu nâu đồng nhất.",
-        "correct": false
-      },
-      {
-        "text": "Nốt ruồi nhỏ hơn 6 mm và tròn đều.",
-        "correct": false
-      },
-      {
-        "text": "Nốt ruồi không thay đổi theo thời gian.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
     "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
     "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
@@ -2357,6 +2361,33 @@
       },
       {
         "text": "Là một khu đô thị nhỏ với ít tiện ích.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
+    "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Làm thế nào để nhận biết nốt ruồi có nguy cơ ung thư?",
+    "answers": [
+      {
+        "text": "Nốt ruồi bất đối xứng và có màu sắc khác nhau.",
+        "correct": true
+      },
+      {
+        "text": "Nốt ruồi có màu nâu đồng nhất.",
+        "correct": false
+      },
+      {
+        "text": "Nốt ruồi nhỏ hơn 6 mm và tròn đều.",
+        "correct": false
+      },
+      {
+        "text": "Nốt ruồi không thay đổi theo thời gian.",
         "correct": false
       }
     ]
@@ -3560,33 +3591,6 @@
     ]
   },
   {
-    "title": "Màu ráy tai thế nào là bình thường?",
-    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
-    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Màu ráy tai bình thường là gì?",
-    "answers": [
-      {
-        "text": "Vàng và hơi dính",
-        "correct": true
-      },
-      {
-        "text": "Trắng và khô",
-        "correct": false
-      },
-      {
-        "text": "Đen và có mùi",
-        "correct": false
-      },
-      {
-        "text": "Đỏ và lỏng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
     "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
     "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
@@ -3640,6 +3644,33 @@
       },
       {
         "text": "Louis Vuitton và Versace",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Màu ráy tai thế nào là bình thường?",
+    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
+    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Màu ráy tai bình thường là gì?",
+    "answers": [
+      {
+        "text": "Vàng và hơi dính",
+        "correct": true
+      },
+      {
+        "text": "Trắng và khô",
+        "correct": false
+      },
+      {
+        "text": "Đen và có mùi",
+        "correct": false
+      },
+      {
+        "text": "Đỏ và lỏng",
         "correct": false
       }
     ]
@@ -4047,55 +4078,28 @@
     ]
   },
   {
-    "title": "Uống nhiều trà sữa hại thận?",
-    "content": "Uống nhiều trà sữa có thể gây hại cho thận, đặc biệt là khi tiêu thụ quá nhiều đường và caffeine. Một ly trà sữa thường chứa từ 50-60g đường, vượt quá mức khuyến cáo hàng ngày, dẫn đến nguy cơ béo phì, tiểu đường và bệnh thận mạn tính. Thói quen uống trà sữa thay nước lọc cũng có thể làm tăng áp lực lên thận và gây mất nước, tăng nguy cơ hình thành sỏi thận. Do đó, nên hạn chế uống trà sữa và duy trì thói quen uống đủ nước mỗi ngày để bảo vệ sức khỏe thận.",
-    "link": "https://vnexpress.net/uong-nhieu-tra-sua-hai-than-4865228.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Uống nhiều trà sữa có hại cho thận không?",
-    "answers": [
-      {
-        "text": "Có, uống nhiều trà sữa có thể hại thận.",
-        "correct": true
-      },
-      {
-        "text": "Không, trà sữa hoàn toàn an toàn cho thận.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có trà sữa trân châu mới hại thận.",
-        "correct": false
-      },
-      {
-        "text": "Uống trà sữa giúp tăng cường chức năng thận.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
-    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
-    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
-    "cat": "the-thao",
+    "title": "Sức bật từ hệ sinh thái số liên ngành",
+    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
+    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
+    "cat": "kinh-doanh",
     "positivity": 8,
-    "importance": 7,
-    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "importance": 9,
+    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
     "answers": [
       {
-        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
         "correct": true
       },
       {
-        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "text": "Chỉ người dân mới được hưởng lợi.",
         "correct": false
       },
       {
-        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "text": "Doanh nghiệp không có cơ hội phát triển.",
         "correct": false
       },
       {
-        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
         "correct": false
       }
     ]
@@ -4128,28 +4132,55 @@
     ]
   },
   {
-    "title": "Sức bật từ hệ sinh thái số liên ngành",
-    "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
-    "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
-    "cat": "kinh-doanh",
+    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
+    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
+    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
+    "cat": "the-thao",
     "positivity": 8,
-    "importance": 9,
-    "question": "Hệ sinh thái số liên ngành mang lại lợi ích gì cho người dân và doanh nghiệp?",
+    "importance": 7,
+    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
     "answers": [
       {
-        "text": "Người dân dễ dàng tiếp cận dịch vụ và doanh nghiệp gia tăng cạnh tranh.",
+        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
         "correct": true
       },
       {
-        "text": "Chỉ người dân mới được hưởng lợi.",
+        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
         "correct": false
       },
       {
-        "text": "Doanh nghiệp không có cơ hội phát triển.",
+        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
         "correct": false
       },
       {
-        "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
+        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Uống nhiều trà sữa hại thận?",
+    "content": "Uống nhiều trà sữa có thể gây hại cho thận, đặc biệt là khi tiêu thụ quá nhiều đường và caffeine. Một ly trà sữa thường chứa từ 50-60g đường, vượt quá mức khuyến cáo hàng ngày, dẫn đến nguy cơ béo phì, tiểu đường và bệnh thận mạn tính. Thói quen uống trà sữa thay nước lọc cũng có thể làm tăng áp lực lên thận và gây mất nước, tăng nguy cơ hình thành sỏi thận. Do đó, nên hạn chế uống trà sữa và duy trì thói quen uống đủ nước mỗi ngày để bảo vệ sức khỏe thận.",
+    "link": "https://vnexpress.net/uong-nhieu-tra-sua-hai-than-4865228.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Uống nhiều trà sữa có hại cho thận không?",
+    "answers": [
+      {
+        "text": "Có, uống nhiều trà sữa có thể hại thận.",
+        "correct": true
+      },
+      {
+        "text": "Không, trà sữa hoàn toàn an toàn cho thận.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có trà sữa trân châu mới hại thận.",
+        "correct": false
+      },
+      {
+        "text": "Uống trà sữa giúp tăng cường chức năng thận.",
         "correct": false
       }
     ]
